--- a/layouts tividades/index.html
+++ b/layouts tividades/index.html
@@ -7,17 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="topo">
-        <div class="logo"> 
-            <p>Logo</p>
-        </div>
-        
-        <div class=" pagina">
-            <P>pagina1</P>
-            <P>pagina2</P>
-            <P>pagina3</P>
-        </div>
+    <header class="topo"> 
+        <span>Logo</span>
+
+     <div class="pagina">
+        <a href="">pagina1</a>
+        <a href="">pagina2</a>
+        <a href="">pagina3</a>
+    </div>
     </header>
-    
+
+
+     <main class="conteiner">
+        <div class="filme">
+            <img src="img/Rectangle 3.png" alt=""> </img>   
+        </div>
+        <h1>Meu titulo</h1>
+            <p>minha descricao do filme</p>
+     </main>
 </body>
 </html>
