--- a/layouts tividades/index.html
+++ b/layouts tividades/index.html
@@ -5,25 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-    <header class="topo"> 
-        <span>Logo</span>
+    <header class="cabecalho"> 
+        <a href="" class="logo">Logo</a>
 
-     <div class="pagina">
+     <div class="menu">
         <a href="">pagina1</a>
         <a href="">pagina2</a>
         <a href="">pagina3</a>
-    </div>
+
+    </div> 
+
     </header>
 
 
      <main class="conteiner">
-        <div class="filme">
-            <img src="img/Rectangle 3.png" alt=""> </img>   
-        </div>
+
+        <div class="filme"> </div>
+
         <h1>Meu titulo</h1>
+
             <p>minha descricao do filme</p>
+
      </main>
 </body>
 </html>
