--- a/layouts tividades/index3.html
+++ b/layouts tividades/index3.html
@@ -12,7 +12,7 @@
     <header class="cabecalho">
         <div class="logo">
 
-            <a href="">logo</a>
+            <a href="">logo1</a>
         </div>
         
         <div class="menu">
